<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/name"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="10dp"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/tv_item_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="20dp"
                    android:text="@string/iterest" />

                <TextView
                    android:id="@+id/tv_item_interest"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="20dp"
                    android:text="@string/color" />

                <TextView
                    android:id="@+id/tv_item_colorvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="5dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>